--- a/Checkpoint 2/style.css
+++ b/Checkpoint 2/style.css
@@ -123,3 +123,12 @@
   background-color: #333;
   color: white;
 }
+
+.resume{
+  width: 900px;
+  height: 1000px;
+  padding: 0 0 30px 30px;
+}
+.iframe{
+  border-radius: 3px;
+}
