--- a/Checkpoint 2/style.css
+++ b/Checkpoint 2/style.css
@@ -27,6 +27,7 @@
     border: 1px solid black;
   }
 
+  /* Style the content of the left side of the header */
   .left{
     float: left;
     color: #f2f2f2;
@@ -37,6 +38,7 @@
     font-family: Arial, Helvetica, sans-serif;
   }
 
+  /* Style the image */
   .right{
     float: right;
   }
