--- a/Checkpoint 2/style.css
+++ b/Checkpoint 2/style.css
@@ -1,3 +1,7 @@
+body{
+  font-family: roboto;
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
     background-color: #333;
